add all 23/10/2020 img

--- a/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/ТЕМА 2.7.md
+++ b/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/ТЕМА 2.7.md
@@ -184,9 +184,9 @@
 
  
 
-|      |                                                              |
-| ---- | ------------------------------------------------------------ |
-|      | ![img](file:///C:\Users\OI109-2\AppData\Local\Temp\msohtmlclip1\01\clip_image004.gif) |
+|      |                           |
+| ---- | ------------------------- |
+|      | ![img](clip_image004.gif) |
 
 
 
