--- a/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/ТЕМА 2.7.md
+++ b/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/ТЕМА 2.7.md
@@ -2,31 +2,9 @@
 
 **МЕТОДЫ ЗАЩИТЫ ОТ НЕСАНКЦИОНИРОВАННОГО ИЗМЕНЕНИЯ СТРУКТУР КС**
 
- 
+  
 
-**ПЛАН:**
-
-**1. Общие требования к защищенности КС от несанкционированного изменения структур**
-
-**2** **Защита от закладок при разработке программ**
-
-**3** **Защита от внедрения аппаратных закладок на этапе разработки и производства 4 Защита от несанкционированного изменения структур КС в процессе эксплуатации**
-
- 
-
- 
-
- 
-
- 
-
- 
-
- 
-
- 
-
-**1.** **Общие требования к защищенности КС от несанкционированного изменения структур**
+## **1.** **Общие требования к защищенности КС от несанкционированного изменения структур**
 
 Несанкционированному изменению могут быть подвергнуты алгоритмическая, программная и техническая структуры КС на этапах ее разработки и эксплуатации. На этапе эксплуатации необходимо выделить работы по модернизации КС, представляющие повышенную опасность для безопасности информации.
 
@@ -98,7 +76,7 @@
 
  
 
-# 2 Защита от закладок при разработке программ
+## 2 Защита от закладок при разработке программ
 
 *Современные технологии программирования*
 
@@ -210,7 +188,7 @@
 
  
 
-# 3 Защита от внедрения аппаратных закладок на этапе разработки и производства
+## 3 Защита от внедрения аппаратных закладок на этапе разработки и производства
 
 Аппаратные закладки могут внедряться не только в процессе разработки и модернизации, но и в процессе серийного производства, транспортирования и хранения аппаратных средств.
 
@@ -238,7 +216,7 @@
 
  
 
-# 4 Защита от несанкционированного изменения структур КС в процессе эксплуатации
+## 4 Защита от несанкционированного изменения структур КС в процессе эксплуатации
 
 *Разграничение доступа к оборудованию*
 
@@ -312,7 +290,7 @@
 
 \3.                   Пароли должны периодически меняться. Безопасное время использования пароля (Тб) может быть рассчитано по формуле [54]:
 
-# Т6 = (Аs *t)/2,
+### Т6 = (Аs *t)/2,
 
 где t - время, необходимое на ввод слова длиной s; s - длина пароля; А - количество символов, из которых может быть составлен» пароль.
 
@@ -414,7 +392,7 @@
 
 Другой подход к получению характеристик целостности связан с использованием *циклических кодов* [63]. Суть метода состоит в следующем. Исходная двоичная последовательность представляется в виде полинома F(x) степени п-1, где п - число бит последовательности. Для выбранного порождающего полинома Р(х) можно записать равенство:
 
-# F(x) • xm= G(x) Р(х) Å R(x),
+### F(x) • xm= G(x) Р(х) Å R(x),
 
 
 
@@ -422,7 +400,7 @@
 
 Из приведенного соотношения можно получить новое выражение:
 
-# F(x) • xmÅR(x)=G(x) Р(х)
+### F(x) • xmÅR(x)=G(x) Р(х)
 
 Из последнего выражения можно сделать вывод: если исходный полином увеличить на хш (сдвинуть в сторону старших разрядов на m разрядов) и сложить с остатком R(x) по модулю 2, то полученный многочлен разделится без остатка на порождающий полином Р(х).
 
