--- a/conspect/КПР-47Д ИТ в менеджменте (управлении) Горницкая Ирина Иосифовна/ТЕМА 2.10.md
+++ b/conspect/КПР-47Д ИТ в менеджменте (управлении) Горницкая Ирина Иосифовна/ТЕМА 2.10.md
@@ -1,6 +1,12 @@
+[TOC]
+
+
+
 # ***ТЕМА 2.*****10**
 
-## ***ИНФОРМАЦИОННЫЕ СИСТЕМЫ УПРАВЛЕНИЯ ПЕРСОНАЛОМ***
+## ИНФОРМАЦИОННЫЕ СИСТЕМЫ УПРАВЛЕНИЯ ПЕРСОНАЛОМ
+
+###  Квалифицированный персонал
 
  Квалифицированный персонал является одним из ключевых факторов успешного развития любой компании. Особое значение обеспечение человеческими ресурсами приобретает в периоды активного роста и развития компании.
 
@@ -74,6 +80,8 @@
 
 ·        получение тарификационных списков сотрудников предприятия с проставлением кадровых параметров.
 
+### Эффекты внедрения
+
 Эффект  от  внедрения   систем  управления              персоналом     можно классифицировать по разным аспектам (табл. 1).
 
 На российском рынке представлены как отечественные, так и западные системы управления персоналом.
@@ -84,6 +92,8 @@
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | Организационный                                              | Экономический                                                | Социальный                                                   |
 | Сокращение  времени принятия решений на всех            уровнях  Управления предпри- ятием.  Повышение качества  кадровых решений.  Оперативность  под- готовки отчетности для органов        государ-  ственного управления**,** предусмотренной  российским государством | Снижение   затрат            на  управление персоналом. Повышение              произ-  водительности                 труда  персонала.  Оптимальное                 ис-  пользование     профес-  сиональных качеств  конкретного сотрудника предприятия | Персональный                учет пенсионных  накоплений сотрудников  предприятия.  Ведение  полной ин- дивидуальной трудовой истории             персонала  предприятия.  Подготовка                руково- дящего  резерва и про- движение по службе наиболее перспективных сотрудников  предприятия |
+
+### Типы системы
 
 К достоинствам отечественных пакетов можно отнести и адаптированность к российской системе учета и делопроизводства, а также более низкую цену по сравнению с наиболее известными пакетами западных фирм. К преимуществу 33 западных пакетов относится в некоторых случаях значительно более полная функциональность.
 
