--- a/conspect/КПР-47Д ИТ в менеджменте (управлении) Горницкая Ирина Иосифовна/ТЕМА 2.10.md
+++ b/conspect/КПР-47Д ИТ в менеджменте (управлении) Горницкая Ирина Иосифовна/ТЕМА 2.10.md
@@ -1,10 +1,16 @@
-[TOC]
+
 
 
 
 # ***ТЕМА 2.*****10**
 
 ## ИНФОРМАЦИОННЫЕ СИСТЕМЫ УПРАВЛЕНИЯ ПЕРСОНАЛОМ
+
+План
+
+1. Квалифицированный персонал
+2. Эффекты внедрения
+3. Типы системы
 
 ###  Квалифицированный персонал
 
