--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.5.md
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.5.md
@@ -592,7 +592,7 @@ bordercolor=black>
 
 <TR>
 
-<ТН>N<ТН>Страна<ТН>Всего медалей<ТН>Золото<ТН>Серебро<ТН>Бронза
+<ТН>N<ТН>Страна<ТН>Всего медалей<ТН>Золото<ТН>Серебро<ТН>Броh3а
 
 <TR>
 
@@ -976,7 +976,7 @@ Align, char, charoff, valign — атрибуты выравнивания. Их
 
 <TR>
 
-<ТН>N<ТН>Страна<ТН>Всего медалей<ТН>Золото<ТН>Серебро<ТН>Бронза
+<ТН>N<ТН>Страна<ТН>Всего медалей<ТН>Золото<ТН>Серебро<ТН>Броh3а
 
 </THEAD>
 
