--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/2.7.md
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/2.7.md
@@ -60,7 +60,7 @@
 
 Пример задания:
 
-<А href="nextchapter.html" charset= "koir-8">переход к следующе главе </А>
+<А href="nextchapter.html" charset= "koir-8">переход к следующе главе </a>
 
 По умолчанию все ссылки отображаются в окне браузера синим цветом и подчеркнутыми. Уже просмотренные ссылки меняют свой цвет на фиолетовый. Если в содержимом элемента А указано изображение, то
 
@@ -100,7 +100,7 @@
 
 <А href= "pessimist.html">
 
-Переход к документу "Программист-пессимист"</А>
+Переход к документу "Программист-пессимист"</a>
 
 <HR>
 
@@ -112,7 +112,7 @@
 
 <HR>
 
-<A hre[f="mailto:kalterbruner@mail.ru](mailto:kalterbruner@mail.ru)"> послать письмо автору страницы</А>
+<A hre[f="mailto:kalterbruner@mail.ru](mailto:kalterbruner@mail.ru)"> послать письмо автору страницы</a>
 
 </BODY>
 
@@ -122,13 +122,13 @@
 
 Каждый заданный элемент А является якорем, по крайней мере, для одной ссылки (обратной ссылки по клавише "Назад"). Местонахождение якоря определяется расположением содержимого элемента А. Наличие атрибута href устанавливает элемент А целевым якорем только одной обратной ссылки. Задание атрибута name позволяет использовать содержащий его элемент А в качестве целевого якоря для неограниченного числа ссылок. Пример:
 
-Внимание, любителям анекдотов!<А href= http://www.myanekdot.ru/ daily. html>Самые свежие анекдоты в сети</А>
+Внимание, любителям анекдотов!<А href= http://www.myanekdot.ru/ daily. html>Самые свежие анекдоты в сети</a>
 
 В этом примере исходным якорем является содержимое элемента А: "Самые свежие анекдоты в сети", целевым якорем документ daily.html на сервере [www.myanekdot.ru.](http://www.myanekdot.ru/)
 
 Разделы анекдотов на странице daily.html, для более быстрого перехода к ним могут быть выделены локальными якорями. Например:
 
-<А name="anchor-shtirlitz">Анекдоты про Штирлица</А>
+<А name="anchor-shtirlitz">Анекдоты про Штирлица</a>
 
 В данном случае элемент А не задает никакой ссылки. Он устанавливает якорь. Задав такой якорь, можно позволить удаленному пользователю при загрузке страницы daily.html сразу переходить в раздел "Анекдоты про Штирлица". Для этого к URL-адресу страницы с анекдотами, через символ "#" добавляется имя якоря:
 
@@ -176,31 +176,31 @@
 
 <UL>
 
-<LI><A href=#about_love>0 любви</А>
+<LI><A href=#about_love>0 любви</a>
 
 
 
-<LI><A href=#about_marriage>0 браке</А>
+<LI><A href=#about_marriage>0 браке</a>
 
-<LI><A href=#about_frendship>0 дружбе</А>
+<LI><A href=#about_frendship>0 дружбе</a>
 
-<LI><A href=#about_children>0 детях</А>
+<LI><A href=#about_children>0 детях</a>
 
-<LI><A href=#about_work>0 работе</А>
+<LI><A href=#about_work>0 работе</a>
 
-<LI><A href=#about_freedom>0 свободе</А>
+<LI><A href=#about_freedom>0 свободе</a>
 
-<LI><A href=#about_trade>0 купле и продаже</А>
+<LI><A href=#about_trade>0 купле и продаже</a>
 
-<LIXA href=#about_law>0 законе</А>
+<LIXA href=#about_law>0 законе</a>
 
-<LI><A href=#about_food>0 еде и питье</А>
+<LI><A href=#about_food>0 еде и питье</a>
 
-<LI><A href=#about_house>0 жилище</А>
+<LI><A href=#about_house>0 жилище</a>
 
 </UL>
 
-<H3 id=about_love>0 любви</НЗ>
+<h3 id=about_love>0 любви</h3>
 
 Тогда, сказала Алмитра, расскажи нам о Любви.
 
@@ -208,7 +208,7 @@
 
  
 
-<НЗ id=about_marriage>0 браке</НЗ>
+<h3 id=about_marriage>0 браке</h3>
 
 Тогда Алмитра заговорила снова и сказала: А что ты скажешь о Браке, учитель?
 
@@ -216,7 +216,7 @@
 
  
 
-<НЗ id=about_frendship>O дружбе</НЗ>
+<h3 id=about_frendship>O дружбе</h3>
 
 А потом вышел юноша и попросил: Скажи нам о Дружбе.
 
@@ -224,7 +224,7 @@
 
  
 
-<НЗ id=about_children>0 детях</НЗ>
+<h3 id=about_children>0 детях</h3>
 
 И женщина с ребенком на груди сказала: Скажи нам о Детях.
 
@@ -232,7 +232,7 @@
 
  
 
-<НЗ id=about_work>0 труде</НЗ>
+<h3 id=about_work>0 труде</h3>
 
 Тогда пахарь произнес: Скажи **нам** о Труде.
 
@@ -240,11 +240,11 @@
 
  
 
-<НЗ id=about_freedom>0 свободе</НЗ> И оратор сказал: Скажи нам о Свободе. И он ответил так: У городских ворот и у очагов ваших домов я видел.
+<h3 id=about_freedom>0 свободе</h3> И оратор сказал: Скажи нам о Свободе. И он ответил так: У городских ворот и у очагов ваших домов я видел.
 
  
 
-<НЗ id=about_trade>0 купле и продаже</НЗ>
+<h3 id=about_trade>0 купле и продаже</h3>
 
 И сказал купец: Расскажи **нам** о Купле и Продаже.
 
@@ -252,19 +252,19 @@
 
  
 
-<НЗ id=about_law>0 законах.</H3>
+<h3 id=about_law>0 законах.</h3>
 
 И тогда сказал адвокат: Что ты думаешь о наших Законах, учитель?
 
  
 
-<НЗ id=about_food>0 еде и питье</НЗ>
+<h3 id=about_food>0 еде и питье</h3>
 
 И тогда старый человек, содержатель двора, сказал: Скажи нам о Еде и Питье.
 
  
 
-<НЗ id=about_house>0 жилище</НЗ>
+<h3 id=about_house>0 жилище</h3>
 
 Тогда каменщик вышел из толпы и сказал: Расскажи нам о Жилищах.
 
@@ -288,7 +288,7 @@
 
  *Пример некорректного задания:* <р>
 
-<А name  =  SHTIRLITZ>  анекдоты про Штирлица             </А> и хорошо забытые старые <А id = shtirlitz> анекдоты про Штирлица</А> </Р>
+<А name  =  SHTIRLITZ>  анекдоты про Штирлица             </a> и хорошо забытые старые <А id = shtirlitz> анекдоты про Штирлица</a> </Р>
 
 В этом случае никакой критической ситуации при этом не возникает, просто браузер будет осуществлять переход на первый от начала якорь с именем Shtirlitz.
 
