--- a/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/ТЕМА 2.7.md
+++ b/conspect/КПР-47Д Защита информации в КС (МДК.05.01) Горницкая Ирина Иосифовна/ТЕМА 2.7.md
@@ -72,7 +72,7 @@
 
 Контроль установленного порядка разработки предполагает регулярный контроль над действиями исполнителей, поэтапный контроль алгоритмов, программ и устройств, приемо-сдаточные испытания.
 
-Разработка защищенных КС и элементов для них завершается сертификацией готового продукта. Сертификация проводится в специальных лабораториях, оснащенных испытательными стендами, укомплектованных специалистами соответствующей ква- лификации и имеющих официальное разрешение (лицензию) на такой вид деятельности. В таких лабораториях по определенным методикам осуществляется проверка программных и аппаратных средств на отсутствие закладок, а также соответствие средств защиты информации их назначению.
+Разработка защищенных КС и элементов для них завершается сертификацией готового продукта. Сертификация проводится в специальных лабораториях, оснащенных испытательными стендами, укомплектованных специалистами соответствующей ква- лификации и имеющих официальное разрешение (лицеh3ию) на такой вид деятельности. В таких лабораториях по определенным методикам осуществляется проверка программных и аппаратных средств на отсутствие закладок, а также соответствие средств защиты информации их назначению.
 
  
 
