--- a/conspect/КПР-47Д ИТ в менеджменте (управлении) Горницкая Ирина Иосифовна/2.8.md
+++ b/conspect/КПР-47Д ИТ в менеджменте (управлении) Горницкая Ирина Иосифовна/2.8.md
@@ -332,7 +332,7 @@ CRM-системы могут включать более 10 различных 
 
 клиентами, маркетинг баз данных и т.д.) и консолидирует полученную информацию в центральном репозитории. Впоследствии она может извле- каться и анализироваться различными способами (ранжирование, кластеризация, агрегирование, визуализация и т.д.) и пользователями в рамках предприятия.
 
-С ростом детализации информации и ее ценности с точки зрения анализа, растет ее стоимость, сложность, формализуемость и изменчивость. Например, гео- и демографические характеристики относительно стабильны, но уже изучены, в то время как история персональных транзакций, в том чис- ле финансовых, история контактов, предпочтения, позволяющие построить профиль клиента и предсказать его поведение, добываются с трудом, обычно в интерактивном режиме требуют времени накопления.
+С ростом детализации информации и ее ценности с точки зрения анализа, растет ее стоимость, сложность, формализуемость и изменчивость. Например, гео- и демографические характеристики относительно стабильны, но уже изучены, в то время как история персональных траh3акций, в том чис- ле финансовых, история контактов, предпочтения, позволяющие построить профиль клиента и предсказать его поведение, добываются с трудом, обычно в интерактивном режиме требуют времени накопления.
 
 *Функционал CRM-системы* включает в себя:
 
