--- a/conspect/КПР-47Д ИТ в менеджменте (управлении) Горницкая Ирина Иосифовна/ИТ_в_менеджменте_Тема_2.3.md
+++ b/conspect/КПР-47Д ИТ в менеджменте (управлении) Горницкая Ирина Иосифовна/ИТ_в_менеджменте_Тема_2.3.md
@@ -330,7 +330,7 @@
 15.  15. Что понимают под избыточностью в данных?
 16.   16. Что понимается под противоречивостью в данных?
 17.    17. Что понимают под целостностью данных? 
-18.    18. Что такое транзакция? 
+18.    18. Что такое траh3акция? 
 19.    19. Какие стратегии управления доступом к данным существуют? 
 20.    20. Что понимают под грифом доступа? 
 21.    21. Что понимают под матрицей доступа? 
@@ -434,8 +434,8 @@
 17. Что понимают под целостностью данных?
       Целостность данных — свойство, при выполнении которого данные сохраняют заранее определённый вид и качество.
 
-18. Что такое транзакция?
-      Транзакция — минимальная логически осмысленная операция, которая имеет смысл и может быть совершена только полностью.
+18. Что такое траh3акция?
+      Траh3акция — минимальная логически осмысленная операция, которая имеет смысл и может быть совершена только полностью.
 
 19. Какие стратегии управления доступом к данным существуют?
       Стратегии управления:
@@ -623,7 +623,7 @@
 
 *Управленческие ИС* осуществляют поддержку принятия решений структурированных задач на уровне контроля выполнения операционной деятельности, основываются на существующих внутри организации данных и их потоках, имеют ограниченные аналитические возможности и не очень гибкую структуру.
 
-*Системы поддержки принятия решений* обслуживают частично структурированные или неструктурированные задачи, решение которых трудно спрогнозировать заранее. Они имеют развитый аналитический аппарат и некоторую совокупность математических моделей. В качестве входных данных используют информацию из офисных, профессионалах и транзакционных систем и систем управления, а также информацию из внешних источников (текущие цены акций, цены на продукты у конкурентов и т.п.).
+*Системы поддержки принятия решений* обслуживают частично структурированные или неструктурированные задачи, решение которых трудно спрогнозировать заранее. Они имеют развитый аналитический аппарат и некоторую совокупность математических моделей. В качестве входных данных используют информацию из офисных, профессионалах и траh3акционных систем и систем управления, а также информацию из внешних источников (текущие цены акций, цены на продукты у конкурентов и т.п.).
 
 *Профессиональные системы* обслуживают информационные потребности специалистов в различных областях знаний ("инженеров, юристов, ученых), повышая их производительность работы и создавая новую информацию и новые знания. По мере того, как индустриальное общество трансформируется в информационное, производительность экономики будет все больше зависеть от уровня развития именно этих систем.
 
