--- a/conspect/МДК.03.02. Инструментальные средства разработки программного обеспечения КПР-38Д/ИСРПО2.md
+++ b/conspect/МДК.03.02. Инструментальные средства разработки программного обеспечения КПР-38Д/ИСРПО2.md
@@ -1,6 +1,6 @@
 # Моделирование
 
-> **Моделирование** – самое эффективное средство поддержки принятия решений, а по словам Ричарда Докинза – «один из самых интересных способов предсказывать будущее»; процесс отражения свойств одного объекта (оригинала) в другом объекте (модели). Это могут быть объекты «как есть» в целом и (или) их отдельные сущности – процессы и явления. Явления – например, поведение животного, состояния погоды – рассматриваются как сложные процессы.
+> **Моделирование** – самое эффективное средство поддержки принятия решений, а по словам Ричарда Докиh3а – «один из самых интересных способов предсказывать будущее»; процесс отражения свойств одного объекта (оригинала) в другом объекте (модели). Это могут быть объекты «как есть» в целом и (или) их отдельные сущности – процессы и явления. Явления – например, поведение животного, состояния погоды – рассматриваются как сложные процессы.
 
 Объект и модель находятся в отношении сходства, т.е. модель по каким-то признакам должна быть подобна изучаемому объекту. Это явление называют **изоморфизмом** (от греч. isos – равный и morphe – форма). Различают три вида подобия:
 
