--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/2.7.md
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/2.7.md
@@ -1,3 +1,7 @@
+[TOC]
+
+
+
 # ССЫЛКИ И ИХ ИСПОЛЬЗОВАНИЕ
 
 Ссылки являются основой гипертекстовой организации документов. Использование ссылок по праву считается основным достоинством World Wide Web. Ссылки связывают один информационный ресурс с другим и каждая из них имеет два конца: исходящий и целевой. Ссылки бывают двух видов: контекстные ссылки и заглавные ссылки.
@@ -78,8 +82,11 @@
 
  *Пример* *использования* *(**рис**. 3.92)*
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01                               Transitional//EN">
+```html
 
+
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01                               Transitional//EN">
 <HTML>
 
 <HEAD>
@@ -117,8 +124,10 @@
 </BODY>
 
 </HTML>
+```
 
- 
+
+
 
 Каждый заданный элемент А является якорем, по крайней мере, для одной ссылки (обратной ссылки по клавише "Назад"). Местонахождение якоря определяется расположением содержимого элемента А. Наличие атрибута href устанавливает элемент А целевым якорем только одной обратной ссылки. Задание атрибута name позволяет использовать содержащий его элемент А в качестве целевого якоря для неограниченного числа ссылок. Пример:
 
@@ -150,10 +159,9 @@
 
 В качестве примера рассмотрим документ, который содержит в себе сразу все главы книги Халиля Джебрана "Пророк". Такой документ содержит довольно много текстовой информации, что затрудняет поиск нужной главы. В этом случае рекомендуется в начало документа вынести список ссылок, ссылающихся на все главы. Благодаря этому переход к нужной информации значительно упрощается.
 
- 
+```html
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
 <HTML>
 
 <HEAD>
@@ -201,6 +209,11 @@
 </UL>
 
 <h3 id=about_love>0 любви</h3>
+
+
+
+
+
 
 Тогда, сказала Алмитра, расскажи нам о Любви.
 
@@ -271,8 +284,8 @@
 </BODY>
 
 </HTML>
+```
 
- 
 
 При нажатии на один из элементов списка происходит переход к соответствующей
 
@@ -356,6 +369,9 @@
 
  *Пример использования:*
 
+```html
+
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
 <HTML>
@@ -389,12 +405,16 @@
 </BODY>
 
 </HTML>
+```
+
+
 
 На данный момент информация о взаимоотношениях документов, задаваемых элементом Link, браузерами никак не учитывается и не отображается. Пользователь может увидеть эти сведения, только просмотрев HTML-код документа. Консорциум W3C уже не один год занимается разработкой браузера с возможностью программирования кнопок "Вперед" и "Назад". Однако разработки этой компании пока не нашли своего применения в популярных и общеиспользуемых браузерах.
 
 Заглавные ссылки учитываются поисковыми машинами в своей работе, поэтому все-таки бывает полезно их задавать. Например, чтобы указать поисковому роботу на расположение иноязычных версий данного документа, достаточно использовать следующее задание элемента Link.
 
- 
+
+```html
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
@@ -432,14 +452,14 @@ href [="h](http://www.mybook.ru/charter)tt[p://www.mybook.ru/charter ](http://ww
 
 </BODY> </HTML>
 
- 
+```
 
 Сегодня основное практическое применение элемента Link, заключается в подключении внешних таблиц стилей (CSS).
 
  
 
  *Например:*
-
+```html
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
 <HTML>
@@ -465,3 +485,4 @@ href [="h](http://www.mybook.ru/charter)tt[p://www.mybook.ru/charter ](http://ww
 </BODY>
 
 </HTML>
+```
